syntax = "proto3";

option java_package = "currency_server";

enum Currency {
    UNKNOWN = 0;
    PLN = 1;
    EUR = 2;
    CHF = 3;
    CAD = 4;
    USD = 5;
}

// List of currencies that a bank is interested in.
message Subscription {
    Currency homeCurrency = 1;
    repeated Currency foreignCurrencies = 2;
}

// Single currency exchange rate value
// (for simplicity it is assumed that there is some constant
// reference value for each currency's exchange rate)
message CurrencyValue {
    Currency currency = 1;
    float value = 2;
}

// List of currency values
message RatesUpdate {
    repeated CurrencyValue rates = 1;
}



service ExchangeRateService {
    rpc subscribe (Subscription) returns (stream RatesUpdate) {}
}