syntax = "proto3";

option java_package = "currency_server";

enum Currency {
    UNKNOWN = 0;
    PLN = 1;
    EUR = 2;
    CHF = 3;
    CAD = 4;
    USD = 5;
}

message ExchangeRateServiceRequest {
    Currency baseCurrency = 1;
    repeated Currency foreignCurrency = 2;
}

message CurrencyValue {
    Currency currency = 1;
    float value = 2;
}

message RateUpdate {
    repeated CurrencyValue exchangeRate = 1;
}

service ExchangeRateService {
    rpc requestExchangeRateService (ExchangeRateServiceRequest) returns (stream RateUpdate) {}
}